--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://sdk.form.run/js/v2/formrun.js"></script>
     <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Noto+Sans+JP:300,400,700&display=swap&subset=japanese" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="js/animation.js">
     <title>AnelA －アネラ－</title>
 </head>
