--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,700|Noto+Sans+JP:300,400,700&display=swap&subset=japanese" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
+    <base href="{{site.github.url}}" charset="utf-8"/>
     <link rel="stylesheet" href="js/animation.js">
     <title>AnelA －アネラ－</title>
 </head>
